Fixing horizontal overflow

--- a/src/reporter/core/static/base.css
+++ b/src/reporter/core/static/base.css
@@ -149,7 +149,6 @@ body {
 }
 
 #content {
-    padding: 10px;
     padding-bottom: 80px; /* Height of the footer element */
 }
 
